# Flight-Assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: Dockerfile
backend/agents/: __init__.py  memory.py  planner.py  tool_executor.py
backend/api/: __init__.py  routes.py
backend/app/: __init__.py  config.py  main.py  startup.py  verify.py
backend/data/: coupons.seed.json
backend/models/: __init__.py  database.py  schemas.py
backend/services/: __init__.py  coupon_service.py  flight_service.py  hotel_service.py  llm_service.py  ranking_service.py
backend/utils/: __init__.py  constants.py  errors.py  helpers.py  logger.py
frontend/: Dockerfile  streamlit_app.py
scripts/: refresh_coupons.py
tests/: __init__.py  conftest.py  test_api.py  test_coupon_service.py  test_helpers.py  test_planner.py  test_ranking_service.py
